# QmlProjectTemplate

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  main.qml
src/Core/: CMakeLists.txt  MyImage.cpp  MyImage.h  QmlImage.qml
src/resource/: icons.qrc  mainicon.rc
src/test/: CMakeLists.txt  TestFirst.cpp  main.cpp
